# opencv-tutorial

./: .gitignore
UsingOpencvWihtGccAndCMake/: CMakeCache.txt  DisplayImage  DisplayImage.cpp  Makefile  README.md  cmake_install.cmake
feature2d/harris/src/: CMakeLists.txt  harris.cpp
image-processing/ErodAndDilat/: .src.swp  CMakeLists.txt
image-processing/ErodAndDilat/src/: .erodAndDilat.cpp.swp  CMakeLists.txt  erodAndDilat.cpp
image-processing/affine/src/: CMakeLists.txt  affine.cpp
image-processing/backProjection/src/: .backProjection.cpp.swp  CMakeLists.txt  backProjection.cpp
image-processing/calcHist/src/: CMakeLists.txt  calcHist.cpp  calcHist.cpp~
image-processing/canny/src/: CMakeLists.txt  canny.cpp
image-processing/compareHist/src/: CMakeLists.txt  compareHist.cpp
image-processing/convexHull/src/: CMakeLists.txt  convexHull.cpp
image-processing/createBound/src/: CMakeLists.txt  createBound.cpp
image-processing/createBoundRotated/src/: CMakeLists.txt  rotatedBoxes.cpp
image-processing/findMusicNotes/: CMakeLists.txt
image-processing/findMusicNotes/src/: CMakeLists.txt  findMusicNotes.cpp
image-processing/findingContours/src/: CMakeLists.txt  findContours.cpp
image-processing/histogramEqualization/src/: CMakeLists.txt  equalizeHist.cpp
image-processing/morephology/: CMakeLists.txt
image-processing/remapping/: CMakeLists.txt
image-processing/smoothing-images/: CMakeLists.txt  README.md  Smoothing.cpp
image-processing/smoothing-images/src/: CMakeLists.txt  Makefile  Smoothing.cpp  cmake_install.cmake
(+31 files in other folders)
